--- a/client/styles.css
+++ b/client/styles.css
@@ -33,7 +33,7 @@ body {
   padding: 15px 20px;
   color: #fff;
   background: #6563ff;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   border: none;
   font-size: 1.0em;
@@ -48,7 +48,7 @@ body {
   background: #fff;
   color: #6563ff;
   border-radius: 10px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .game {
@@ -62,11 +62,11 @@ body {
 }
 
 .generators {
-  display: flex;
+  display: flex;  
   color: #6563ff;
   justify-content: space-between;
+  width: 100%;
   align-items: center;
-  gap: 14em;
   border-radius: 10px;
   text-transform: uppercase;
   letter-spacing: 0.08em;
@@ -80,7 +80,7 @@ body {
   justify-content: center;
   align-items: center;
   background: #fff;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   font-size: 3em;
   transition: 0.25s;
@@ -97,9 +97,41 @@ body {
   position: absolute;
   inset: 0;
   background: #fff;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   transition: 0.25s;
   transform: rotateY(0deg);
   backface-visibility: hidden;
+}
+
+.sidebar {
+  position: fixed;
+  top: auto;
+  bottom: auto;
+  width: 25vh;
+  height: 50vh;
+  right: 25px;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 100;
+  border-radius: 2vh;
+  padding: 2vh;
+}
+
+#leaderboard {
+  margin-top: 1.5vh;
+  margin-left: 3vh;
+
+  li {
+    margin-bottom: 1vh;
+  }
+}
+
+#leaderboard li {
+  font-size: 1em;
+}
+
+@media only screen and (max-width: 1100px) {
+  .sidebar {
+      display: none; 
+  }
 }
